--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "intervention/image": "^3.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
