--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "watch": "vite build --watch"
-
-  },
-  "devDependencies": {
-    "axios": "^1.6.1",
-    "laravel-mix": "^6.0.49",
-    "laravel-vite-plugin": "^0.8.0",
-    "vite": "^4.0.0"
-  },
-  "name": "cms",
-  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
-  "version": "1.0.0",
-  "main": "vite.config.js",
-  "directories": {
-    "test": "tests"
-  },
-  "dependencies": {
-    "asynckit": "^0.4.0",
-    "combined-stream": "^1.0.8",
-    "delayed-stream": "^1.0.0",
-    "esbuild": "^0.18.20",
-    "follow-redirects": "^1.15.3",
-    "form-data": "^4.0.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "nanoid": "^3.3.7",
-    "picocolors": "^1.0.0",
-    "picomatch": "^2.3.1",
-    "postcss": "^8.4.32",
-    "proxy-from-env": "^1.1.0",
-    "rollup": "^3.29.4",
-    "source-map-js": "^1.0.2",
-    "vite-plugin-full-reload": "^1.1.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "watch": "vite build --watch"
+    },
+    "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^4.5.0",
+        "axios": "^1.6.1",
+        "bootstrap": "^5.2.3",
+        "laravel-mix": "^6.0.49",
+        "laravel-vite-plugin": "^0.8.0",
+        "sass": "^1.56.1",
+        "vite": "^4.0.0",
+        "vue": "^3.2.37"
+    },
+    "name": "cms",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "version": "1.0.0",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "dependencies": {
+        "asynckit": "^0.4.0",
+        "combined-stream": "^1.0.8",
+        "delayed-stream": "^1.0.0",
+        "esbuild": "^0.18.20",
+        "follow-redirects": "^1.15.3",
+        "form-data": "^4.0.0",
+        "mime-db": "^1.52.0",
+        "mime-types": "^2.1.35",
+        "nanoid": "^3.3.7",
+        "picocolors": "^1.0.0",
+        "picomatch": "^2.3.1",
+        "postcss": "^8.4.32",
+        "proxy-from-env": "^1.1.0",
+        "rollup": "^3.29.4",
+        "source-map-js": "^1.0.2",
+        "vite-plugin-full-reload": "^1.1.0"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
