add vue.js and vue

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "asynckit": "^0.4.0",
+        "chart.js": "^4.4.1",
         "combined-stream": "^1.0.8",
         "delayed-stream": "^1.0.0",
         "esbuild": "^0.18.20",
