--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "proxy-from-env": "^1.1.0",
         "rollup": "^3.29.4",
         "source-map-js": "^1.0.2",
-        "vite-plugin-full-reload": "^1.1.0"
+        "vite-plugin-full-reload": "^1.1.0",
+        "webpack": "^5.89.0"
     },
     "keywords": [],
     "author": "",
