--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "intervention/image": "^3.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.11",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.3",
         "morilog/jalali": "^3.4",
-        "nesbot/carbon": "^2.72"
+        "nesbot/carbon": "^2.72",
+        "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
