--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
+        "sweetalert": "^2.1.2",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
     },
