--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
         "@vitejs/plugin-vue": "^4.5.0",
         "axios": "^1.6.1",
         "bootstrap": "^5.2.3",
+        "laravel-echo": "^1.15.3",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.8.0",
+        "pusher-js": "^8.4.0-rc2",
         "sass": "^1.56.1",
         "sweetalert": "^2.1.2",
         "vite": "^4.0.0",
